# tamaterm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tamaterm/: art_registry.py  cli.py  constants.py  daemon.py  display.py  events.py  evolution.py  install.py  platform_compat.py  state.py  stats.py
src/tamaterm/art/: cat.py  dog.py  slime.py
tests/: test_art_registry.py  test_cli.py  test_daemon.py  test_display.py  test_events.py  test_evolution.py  test_install.py  test_platform_compat.py  test_state.py  test_stats.py
