[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tamaterm"
version = "0.1.1"
description = "A virtual pet that lives in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "tamaterm contributors" },
]
keywords = ["terminal", "pet", "virtual-pet", "cli", "tamagotchi", "ascii-art"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "click>=8.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
tamaterm = "tamaterm.cli:cli"

[project.urls]
Homepage = "https://github.com/tamaterm/tamaterm"
Repository = "https://github.com/tamaterm/tamaterm"
Issues = "https://github.com/tamaterm/tamaterm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tamaterm"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
